<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/usuarioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/usuario" />

    <TextView
        android:id="@+id/senhaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usuario"
        android:layout_below="@+id/usuarioLabel"
        android:layout_marginTop="66dp"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usuarioLabel"
        android:layout_below="@+id/usuarioLabel"
        android:layout_marginTop="17dp"
        android:inputType="text"
        android:ems="10" >
         <requestFocus />
        
    </EditText>

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/usuario"
        android:layout_below="@+id/senhaLabel"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" >

       
    </EditText>

    <Button
        android:id="@+id/auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senha"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/usuarioLabel"
        android:text="@string/auth" />

    <TextView
        android:id="@+id/teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/teste" />

</RelativeLayout>
